--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
       <p class="updated">Posted on {{post.date | date: "%d %B %Y"}} by {{post.author}}</p>
     </header>
     {{post.content}}
+    <p><a href="{{post.url}}#disqus_thead"></a></p>
   </article>
   {% endfor %}
 
@@ -59,3 +60,17 @@ layout: default
     {% endif %}
 
 </div>
+
+<script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'easyartdevelopers'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+            var s = document.createElement('script'); s.async = true;
+            s.type = 'text/javascript';
+            s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+        </script>
+        
