--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <p class="updated">Posted on {{post.date | date: "%d %B %Y"}} by {{post.author}}</p>
     </header>
     {{post.content}}
-    <p><a href="{{post.url}}#comments">Leave a comment</a></p>
+    <p><a href="{{post.url}}">Leave a comment</a></p>
   </article>
   {% endfor %}
 
